email-service/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service-deployment
  labels:
    app: email-service
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
      - name: email-service
        image: 15012013/email-service:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 200m
            memory: 200M
          limits:
            cpu: 500m
            memory: 512M
        ports:
          - containerPort: 5058
        # livenessProbe:
        #   httpGet:
        #     path: /api/health-check
        #     port: 5089
          # initialDelaySeconds: 3
          # periodSeconds: 3
          # failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: email-service-clusterip-svc
  namespace: application
spec:
  selector:
    app: email-service
  ports:
    - name: email-service
      protocol: TCP
      port: 5058  
      targetPort: 5058
